--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "@types/scrollreveal": "^0.0.11",
     "next": "14.1.4",
     "nextjs-toploader": "^1.6.11",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "rss-parser": "^3.13.0",
