--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
     "@types/scrollreveal": "^0.0.11",
+    "gsap": "^3.12.5",
     "next": "14.1.4",
     "nextjs-toploader": "^1.6.11",
+    "node-releases": "^2.0.14",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
