--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/scrollreveal": "^0.0.11",
     "gsap": "^3.12.5",
     "next": "14.1.4",
+    "next-view-transitions": "^0.3.4",
     "nextjs-toploader": "^1.6.11",
     "node-releases": "^2.0.14",
     "nodemailer": "^6.9.13",
